--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
             <div class="link-subtitle">bloopmovies.com</div>
         </a>
     </div>
-    <small>© 2021 Cory Swainston</small>
+    <small>© 2021 <a href="/cj.jpeg">Cory Swainston</a></small>
 </body>
 </html>
