--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -59,7 +61,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+              <span>Portfolio</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -175,7 +178,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I'm focused on building cross-platform, usable mobile apps. I'm also confident working on backend services and building entire products from start to end.</p>
+          <p>I'm focused on building cross-platform, usable mobile apps. I'm also confident working on backend services
+            and building entire products from start to end.</p>
         </div>
 
         <div class="row skills-content">
@@ -185,21 +189,24 @@
             <div class="progress">
               <span class="skill">Flutter <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Android (Kotlin and Java) <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">iOS (Swift) <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -210,21 +217,24 @@
             <div class="progress">
               <span class="skill">JavaScript/Node.js <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">SQL <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -242,7 +252,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I keep all of this information current <a target="_blank" href="https://linkedin.com/in/coryswainston">on LinkedIn</a>.</p>
+          <p>I keep all of this information current <a target="_blank" href="https://linkedin.com/in/coryswainston">on
+              LinkedIn</a>.</p>
         </div>
 
         <div class="row">
@@ -251,7 +262,9 @@
             <div class="resume-item pb-0">
               <h4>Cory Swainston</h4>
               <p><em>Utah County, UT</em></p>
-              <p>Experienced software engineer focused on mobile apps. I work with either platform and love Flutter. I like to be front-end but I can be full-stack. Also interested in exploring UIs for Watch and TV operating systems. I like work that allows me to be a problem solver and make decisions.</p>
+              <p>Experienced software engineer focused on mobile apps. I work with either platform and love Flutter. I
+                like to be front-end but I can be full-stack. Also interested in exploring UIs for Watch and TV
+                operating systems. I like work that allows me to be a problem solver and make decisions.</p>
               <!-- <ul>
                 <li>swainstoncory@gmail.com</li>
                 <li>(123) 456-7891</li>
@@ -270,7 +283,9 @@
               <h4>B.S. Software Engineering</h4>
               <h5>2016 - 2020</h5>
               <p><em>Brigham Young University - Idaho</em></p>
-              <p>I had a great time attending BYU-I. My favorite classes were project-based topic classes that allowed me to be creative. I also loved English and business classes. I was the Chair of the BYU-Idaho Association for Computer Machinery chapter.</p>
+              <p>I had a great time attending BYU-I. My favorite classes were project-based topic classes that allowed
+                me to be creative. I also loved English and business classes. I was the Chair of the BYU-Idaho
+                Association for Computer Machinery chapter.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -292,7 +307,8 @@
               <ul>
                 <li>Participated in the design, development, and deployment of a financial services app in Flutter</li>
                 <li>Created backend APIs to be used by web and mobile clients</li>
-                <li>Built a client-facing dashboard to manage complex debit product configurations in a user-friendly way</li>
+                <li>Built a client-facing dashboard to manage complex debit product configurations in a user-friendly
+                  way</li>
                 <li>Spearheaded an effort to produce automated testing and report on coverage</li>
               </ul>
             </div>
@@ -317,6 +333,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-work">Work</li>
               <li data-filter=".filter-apps">Apps</li>
+              <li data-filter=".filter-apps">Web</li>
               <li data-filter=".filter-writing">Writing</li>
             </ul>
           </div>
@@ -328,8 +345,22 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://medium.com/@swainston.cory89/a7092bdd8fec" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://medium.com/@swainston.cory89/a7092bdd8fec" title="More Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="https://chrome.google.com/webstore/detail/zillow-to-utah-real-estat/binimaoealkbnikmlmehgpmchpdkknmj?hl=en-US"
+                  title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -338,7 +369,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="https://www.gameplanapps.com/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -348,8 +380,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="https://play.google.com/store/apps/details?id=com.coryswainston.game" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="https://play.google.com/store/apps/details?id=com.coryswainston.game" title="More Details"><i
+                    class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -358,8 +392,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="https://medium.com/@swainston.cory89/use-this-ios-14-feature-to-make-google-assistant-seamless-on-iphone-244bf3948262" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="https://medium.com/@swainston.cory89/use-this-ios-14-feature-to-make-google-assistant-seamless-on-iphone-244bf3948262"
+                  title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -368,7 +404,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="https://www.sofi.com/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -575,7 +612,7 @@
         </div>
 
       </div>
-    </section>End Contact Section --> 
+    </section>End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -595,7 +632,8 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
