--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-work">Work</li>
               <li data-filter=".filter-apps">Apps</li>
-              <li data-filter=".filter-apps">Web</li>
+              <li data-filter=".filter-web">Web</li>
               <li data-filter=".filter-writing">Writing</li>
             </ul>
           </div>
@@ -347,8 +347,8 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://medium.com/@swainston.cory89/a7092bdd8fec" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <a href="https://medium.com/@swainston.cory89/stop-telling-me-college-degrees-are-useless-a7092bdd8fec"
+                  title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
