--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link
-    href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,600,700,800,900"
+    href="https://fonts.googleapis.com/css?family=Inter:100,200,400,600,700,800,900"
     rel="stylesheet">
 
   <!-- Template Main CSS File -->
@@ -26,40 +26,33 @@
 <body>
 
   <header>
-    <div class="wrapper">
-      <h1>CORY SWAINSTON</h1>
-      <p>software engineer, etc.</p>
-    </div>
+    <h1>Cory Swainston</h1>
+    <h2>Software Engineer</h2>
   </header>
   <main>
     <div class="items">
       <div class="item" onclick="window.open('https://linkedin.com/in/coryswainston', '_blank');">
-        <img src="assets/img/linkedin.png" alt="">
+        <a>LinkedIn</a>
       </div>
       <div class="item" onclick="window.open('https://twitter.com/coryswainston', '_blank');">
-        <img src="assets/img/twitter.png" alt="">
+        <a>Twitter</a>
       </div>
       <div class="item" onclick="window.open('https://github.com/coryswainston', '_blank');">
-        <img src="assets/img/github.png" alt="">
+        <a>GitHub</a>
       </div>
       <div class="item" onclick="window.open('https://medium.com/@swainston.cory89', '_blank');">
-        <img src="assets/img/medium.png" alt="">
+        <a>Medium</a>
       </div>
       <div class="item" onclick="window.open('https://sofi.com', '_blank');">
-        <img src="assets/img/sofi.png" alt="">
+        <a>SoFi</a>
       </div>
       <div class="item" onclick="window.open('https://dashboard.gameplanapps.com', '_blank');">
-        <img src="assets/img/gameplan.png" alt="">
+        <a>Gameplan Apps</a>
       </div>
     </div>
-
-<!--    <div class="description">-->
-<!--      <p>This is a description and i'm just gonna put it right here.</p>-->
-<!--    </div>-->
   </main>
   <footer>
-    <img src="assets/img/computer.svg" alt="">
-    <small>&copy; CORY SWAINSTON 2022</small>
+    <small>&copy; Cory Swainston 2022</small>
   </footer>
   <script src="assets/js/main.js"></script>
 </body>
